--- a/chamber.html
+++ b/chamber.html
@@ -19,7 +19,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="chamber.html">Chamber</a></li>
                 <li><a href="GitHub.html">GitHub Profile</a></li>
-                <li><a href="linkedin.com/in/quadri-kolawole-adisa-5b5a3528b ">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/quadri-kolawole-adisa-5b5a3528b/">LinkedIn</a></li>
             </ul>
         </nav>
     </header>
