--- a/index.html
+++ b/index.html
@@ -43,22 +43,18 @@
         </div>
 
         <div class="certificate">
-            <h2>Web and Computer Programming Certificate</h2>
-            <div class="certificate-options">
-                <h4>All</h4>
-                <h4>CSE</h4>
-                <h4>WDD</h4>
-            </div>
-        </div>
-        
-        <div class="course-list">
-            <h4>CSE110</h4>
-            <h4>WDD130</h4>
-            <h4>CSE111</h4>
-            <h4>CSE210</h4>
-            <h4>WDD131</h4>
-            <h4>WDD231</h4>
-        </div>
+    <h2>Web and Computer Programming Certificate</h2>
+    <div class="certificate-options">
+        <button id="allCourses">All</button>
+        <button id="cseCourses">CSE</button>
+        <button id="wddCourses">WDD</button>
+    </div>
+    <div id="courseList"></div>
+    <div class="total-credits">
+        <h3>Total Credits: <span id="totalCredits"></span></h3>
+    </div>
+</div>
+
     </main>
 
     <footer>
