--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>WDD231 - Web Frontend Development I</title>
     <meta name="description" content="Home page">
     <meta name="author" content="Quadri Kolawole">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
             <h1 class="name">Quadri K. Adisa</h1>
             <div class="hamburger" onclick="toggleMenu()">☰</div>
         </section>
-        <section class="navbar">
+        <div class="navbar">
             <nav>
                 <ul class="navbar-links" id="navLinks">
                     <li><a href="#home">Home</a></li>
@@ -29,7 +29,7 @@
                     <li><a href="https://www.linkedin.com/in/quadri-kolawole-adisa-5b5a3528b/">LinkedIn</a></li>
                 </ul>
             </nav>
-          </section>
+        </div>
     </header>
 
     <main>
@@ -49,8 +49,7 @@
                 <p>Top view</p>
             </div>
         </section>
-        <div class="certificate">
-        <section>
+        <section class="certificate">
             <h2>Web and Computer Programming Certificate</h2>
             <div class="certificate-options">
                 <button id="allCourses">All</button>
