--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
             <div class="place">
                 <h2>Ibadan, Nigeria</h2>
-                <img class="place-img" src="images/place.webp" alt="Scenic view of Ibadan, Nigeria">
+                <img class="place-img" src="images/place.jpg" alt="Scenic view of Ibadan, Nigeria">
                 <p>Top view</p>
             </div>
         </section>
