--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD231 - Web Frontend Development I</title>
+    <title>WDD231 - Web Frontend Development I - Quadri Kolawole</title>
     <meta name="description" content="Home page">
     <meta name="author" content="Quadri Kolawole">
     <link rel="preconnect" href="https://fonts.googleapis.com">
