--- a/GitHub.html
+++ b/GitHub.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <section class="autor">
-            <img src="images/profile_pic.jpg" class="profile-pic" alt="Profile picture of Quadri K. Adisa">
+            <img src="images/profile_pic.webp" class="profile-pic" alt="Profile picture of Quadri K. Adisa">
             <h1 class="name">Quadri K. Adisa</h1>
             <div class="hamburger" onclick="toggleMenu()">☰</div>
         </section>
@@ -34,7 +34,7 @@
 
     <main>
         <section class="home-section" id="home"></section>
-            <h2 class="section-heading">Welcome to My Homepage</h2>
+            <h2 class="section-heading">Welcome to My GitHub page</h2>
             <p class="section-content">
                 This is a simple personal website designed to showcase my skills, experiences, and interests. I am currently a software engineer, with a passion for creating innovative and user-friendly solutions.
             </p>
