--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <section class="autor">
-            <img src="images/profile_pic.jpg" class="profile-pic" alt="Profile picture of Quadri K. Adisa">
+            <img src="images/profile_pic.webp" class="profile-pic" alt="Profile picture of Quadri K. Adisa">
             <h1 class="name">Quadri K. Adisa</h1>
             <div class="hamburger" onclick="toggleMenu()">☰</div>
         </section>
@@ -45,7 +45,7 @@
         
             <div class="place">
                 <h2>Ibadan, Nigeria</h2>
-                <img class="place-img" src="images/place.jpg" alt="Scenic view of Ibadan, Nigeria">
+                <img class="place-img" src="images/place.webp" alt="Scenic view of Ibadan, Nigeria">
                 <p>Top view</p>
             </div>
         </section>
