--- a/chamber.html
+++ b/chamber.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <section class="autor">
-            <img src="images/profile_pic.jpg" class="profile-pic" alt="Profile picture of Quadri K. Adisa">
+            <img src="images/profile_pic.webp" class="profile-pic" alt="Profile picture of Quadri K. Adisa">
             <h1 class="name">Quadri K. Adisa</h1>
             <div class="hamburger" onclick="toggleMenu()">☰</div>
         </section>
