--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="navbar">
             <nav>
                 <ul class="navbar-links" id="navLinks">
-                    <li><a href="#home">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="chamber.html">Chamber</a></li>
                     <li><a href="GitHub.html">GitHub Profile</a></li>
                     <li><a href="https://www.linkedin.com/in/quadri-kolawole-adisa-5b5a3528b/">LinkedIn</a></li>
