--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             <div class="total-credits">
                 <h3>Total Credits: <span id="totalCredits"></span></h3>
             </div>
+            <div class ="Completed-Credits">
+                <h3>Completed Course Credits: <span id="CompletedCredits"></span></h3>
+            </div>
         </section>
     </main>
 
