--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD231 - Web Frontend Development I - Quadri Kolawole</title>
-    <meta name="description" content="Home page">
+    <meta name="description" content="Directory page">
     <meta name="author" content="Quadri Kolawole">
+    <meta property="og:title" content="website">
+    <meta property="og:description" content="Directory page">
+    <meta property="og:url" content="https://adiquatech.github.io/wdd231/chamber/directory.html">
+    <meta property="og:image" content = "images/web-image-tumblr.JPG">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -19,7 +23,8 @@
         <section class="autor">
             <img src="images/profile_pic.webp" class="profile-pic" alt="Profile picture of Quadri K. Adisa">
             <h1 class="name">Quadri K. Adisa</h1>
-            <div class="hamburger" onclick="toggleMenu()">☰</div>
+            <button id="hamburger">&#9776;</button>
+
         </section>
         <div class="navbar">
             <nav>
@@ -34,37 +39,7 @@
     </header>
 
     <main>
-        <section id = "section">
-            <div class="course-work">
-                <h2>Course Work</h2>
-                <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </div>
         
-            <div class="place">
-                <h2>Ibadan, Nigeria</h2>
-                <img class="place-img" src="images/place.webp" alt="Scenic view of Ibadan, Nigeria">
-                <p>Top view</p>
-            </div>
-        </section>
-        <section class="certificate">
-            <h2>Web and Computer Programming Certificate</h2>
-            <div class="certificate-options">
-                <button id="allCourses">All</button>
-                <button id="cseCourses">CSE</button>
-                <button id="wddCourses">WDD</button>
-            </div>
-            <div id="courseList"></div>
-            <div class="total-credits">
-                <h3>Total Credits: <span id="totalCredits"></span></h3>
-            </div>
-            <div class ="Completed-Credits">
-                <h3>Completed Course Credits: <span id="CompletedCredits"></span></h3>
-            </div>
-        </section>
     </main>
 
     <footer>
