--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,10 +6,11 @@
     <title>WDD231 - Web Frontend Development I - Quadri Kolawole</title>
     <meta name="description" content="Directory page">
     <meta name="author" content="Quadri Kolawole">
-    <meta property="og:title" content="website">
-    <meta property="og:description" content="Directory page">
+    <meta property="og:title" content="Directory page">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Directory page for chamber of commerce ">
     <meta property="og:url" content="https://adiquatech.github.io/wdd231/chamber/directory.html">
-    <meta property="og:image" content = "images/web-image-tumblr.JPG">
+    <meta property="og:image" content = "https://adiquatech.github.io/wdd231/images/place.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
