--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <div class="hamburger" onclick="toggleMenu()">☰</div>
         </section>
         <div class="navbar">
-            <nav>
+            <nav id="navigation">
                 <ul class="navbar-links" id="navLinks">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="chamber.html">Chamber</a></li>
                     <li><a href="GitHub.html">GitHub Profile</a></li>
                     <li><a href="https://www.linkedin.com/in/quadri-kolawole-adisa-5b5a3528b/" target="_blank">LinkedIn</a></li>
