--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
+    <script src="scripts/member.js" defer></script>
 </head>
 <body>
     <header>
@@ -27,17 +28,17 @@
             <p>Chambr of Commerce</p>
             <button id="hamburger">&#9776;</button>
         </section>
+        <div class="navbar">
+            <nav id="navigation">
+                <ul class="navLinks">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="directory.html" class="active">Directory</a></li>
+                    <li><a href="join.html">Join</a></li>
+                    <li><a href="https://www.linkedin.com/in/quadri-kolawole-adisa-5b5a3528b/" target="_blank">LinkedIn</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    <div class="navbar">
-        <nav id="navigation">
-            <ul class="navLinks">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="directory.html" class="active">Directory</a></li>
-                <li><a href="join.html">Join</a></li>
-                <li><a href="https://www.linkedin.com/in/quadri-kolawole-adisa-5b5a3528b/" target="_blank">LinkedIn</a></li>
-            </ul>
-        </nav>
-    </div>
 
     <main>
         <main class="maindirectory">
