--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,7 @@
             <nav id="navigation">
                 <ul class="navLinks">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="directory.html" class="active">Directory</a></li>
+                    <li class="current-menu-item"><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
                     <li><a href="page-four.html">Page-four</a></li>
 
@@ -43,7 +43,7 @@
     
 
     <main>
-        <h1>Join page</h1>
+       <h1>Home page</h1>
     </main>
 
     <footer>
