--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -16,7 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/large.css">
+    <link rel="stylesheet" href="styles/small.css">
     <script src="scripts/script.js" defer></script>
     <script src="scripts/member.js" defer></script>
 </head>
@@ -28,20 +29,20 @@
             <p>Chambr of Commerce</p>
             <button id="hamburger">&#9776;</button>
         </section>
+    </header>
         <div class="navbar">
-            <nav id="navigation">
+            <nav>
                 <ul class="navLinks">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="directory.html" class="active">Directory</a></li>
+                    <li class="current-menu-item"><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="https://www.linkedin.com/in/quadri-kolawole-adisa-5b5a3528b/" target="_blank">LinkedIn</a></li>
+                    <li><a href="page-four.html">Page-four</a></li>
                 </ul>
             </nav>
         </div>
-    </header>
+    
 
-    <main>
-        <main class="maindirectory">
+    <main class="maindirectory">
             <h2>Chamber Members</h2>
                 <div>
                     <p>Layout:
@@ -50,6 +51,7 @@
                     </p>
                 </div>
             <article id="cards">
+                
             </article>
     </main>
 
