--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -16,10 +16,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/large.css">
-    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
-    <script src="scripts/member.js" defer></script>
 </head>
 <body>
     <header>
@@ -40,14 +38,13 @@
                 </ul>
             </nav>
         </div>
-    
 
     <main class="maindirectory">
             <h2>Chamber Members</h2>
                 <div>
                     <p>Layout:
-                        <button id="grid">🔲Grid</button>
-                        <button id="list">📃List</button>
+                        <button id="gridView">🔲Grid</button>
+                        <button id="listView">📃List</button>
                     </p>
                 </div>
             <article id="cards">
