--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,8 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/large.css">
-    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
@@ -33,9 +32,9 @@
             <nav id="navigation">
                 <ul class="navLinks">
                     <li><a href="index.html">Home</a></li>
-                    <li class="current-menu-item"><a href="directory.html">Directory</a></li>
+                    <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="page-four.html">Page-four</a></li>
+                    <li><a href="page-four.html">Home Page</a></li>
 
                 </ul>
             </nav>
@@ -43,7 +42,7 @@
     
 
     <main>
-       <h1>Home page</h1>
+        <h1>Home page</h1>
     </main>
 
     <footer>
