--- a/chamber/page-four.html
+++ b/chamber/page-four.html
@@ -16,8 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/large.css">
-    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
 </head>
 <body>
@@ -33,14 +32,13 @@
             <nav id="navigation">
                 <ul class="navLinks">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="directory.html" class="active">Directory</a></li>
+                    <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
                     <li><a href="page-four.html">Page-four</a></li>
 
                 </ul>
             </nav>
         </div>
-    
 
     <main>
         <h1>Page-four</h1>
