--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -11,6 +11,7 @@
     <meta property="og:description" content="Directory page for chamber of commerce ">
     <meta property="og:url" content="https://adiquatech.github.io/wdd231/chamber/directory.html">
     <meta property="og:image" content="https://adiquatech.github.io/wdd231/chamber/images/place-og.webp">
+    <meta name="twitter:card" content="summary" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
