--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -36,7 +36,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li class="current-menu-item"><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="page-four.html">Page-four</a></li>
+                    <li><a href="Discover.html">Discover</a></li>
                 </ul>
             </nav>
         </div>
