--- a/chamber/join.html
+++ b/chamber/join.html
@@ -34,7 +34,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
-                    <li><a href="page-four.html">Page-four</a></li>
+                    <li><a href="Discover.html">Discover</a></li>
 
                 </ul>
             </nav>
