--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,7 +37,6 @@
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="Discover.html">Discover</a></li>
-
             </ul>
         </nav>
     </div>
@@ -52,27 +51,26 @@
             <div id="current-weather">
                 <h2>Current Weather</h2>
                 <div id="weather">
-                    <img id="icon" src="" alt="">
-                    <p id="city"></p>
-                    <p id="country"></p>
-                    <p id="temperature"></p>
-                    <p id="humidity"></p>
-                    <p id="wind"></p>
-                    <p id="pressure"></p>
-                    <p id="sunrise"></p>
-                    <p id="sunset"></p>
+                    <img id="weatherIcon" src="" alt="">
+                    <div id="weatherInfo">
+                        <p id="city"></p>
+                        <p id="temperature"></p>
+                        <p id="description"></p>
+                        <p id="high"></p>
+                        <p id="low"></p>
+                        <p id="humidity"></p>
+                        <p id="sunrise"></p>
+                        <p id="sunset"></p>
+                    </div>
                 </div>
             </div>
 
             <div id="weather-forecast">
                 <h2>Weather Forecast</h2>
                 <div id="forecast">
-                    <div class="day">
-                        <h3></h3>
-                        <img src="" alt="">
-                        <p></p>
-                        <p></p>
-                    </div>
+                    <p id="today"></p>
+                    <p id="day1"></p>
+                    <p id="day2"></p>
                 </div>
             </div>
         </section>
