--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,7 +26,7 @@
         <section class="autor">
             <img src="images/profile_pic.webp" class="profile-pic" alt="Profile picture of Quadri K. Adisa">
             <h1 class="name">Adiquatech</h1>
-            <p>Chambr of Commerce</p>
+            <p>Chamber of Commerce</p>
             <button id="hamburger">&#9776;</button>
         </section>
     </header>
@@ -42,6 +42,10 @@
     </div>
 
     <main>
+        <section class="hero">
+            <img src="images/place-desktop.webp" alt="Hero Image" class="hero-image">
+        </section>
+
         <section id="section">
             <div id="event">
                 <h2>Event</h2>
