--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/script.js" defer></script>
+    <script src="scripts/members.js" defer></script>
 </head>
 <body>
     <header>
