--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles/home.css">
     <script src="scripts/script.js" defer></script>
     <script src="scripts/weather.js" defer></script>
+    <script src="scripts/members.js" defer></script>
 </head>
 <body>
     <header>
@@ -43,9 +44,18 @@
 
     <main>
         <section class="hero">
-            <img src="images/place-desktop.webp" alt="Hero Image" class="hero-image">
+            <picture>
+                <source media="(max-width: 768px)" src="images/place-tablet.webp">
+                <source media="(max-width: 480px)" src="images/place-mobile.webp">
+                <img src="images/place-desktop.webp" alt="Hero Image" class="hero-image">
+            </picture>
+            <div class="hero-content">
+                <h1>Welcome to Quadri Chamber of Commerce</h1>
+                <p>Your gateway to business success</p>
+                <a href="join.html" class="cta-button">Join Us Today!</a>
+            </div>
         </section>
-
+        
         <section id="section">
             <div id="event">
                 <h2>Event</h2>
@@ -78,6 +88,9 @@
                 </div>
             </div>
         </section>
+
+        <div id="membership-container"></div>
+
     </main>
 
     <footer>
