--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <nav id="navigation">
                 <ul class="navbar-links" id="navLinks">
                     <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="chamber.html">Chamber</a></li>
+                    <li><a href="chamber/index.html">Chamber</a></li>
                     <li><a href="GitHub.html">GitHub Profile</a></li>
                     <li><a href="https://www.linkedin.com/in/quadri-kolawole-adisa-5b5a3528b/" target="_blank">LinkedIn</a></li>
                 </ul>
