--- a/GitHub.html
+++ b/GitHub.html
@@ -24,7 +24,7 @@
             <nav>
                 <ul class="navbar-links" id="navLinks">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="chamber.html">Chamber</a></li>
+                    <li><a href="chamber/index.html">Chamber</a></li>
                     <li><a href="GitHub.html">GitHub Profile</a></li>
                     <li><a href="https://www.linkedin.com/in/quadri-kolawole-adisa-5b5a3528b/">LinkedIn</a></li>
                 </ul>
