--- a/chamber/Discover.html
+++ b/chamber/Discover.html
@@ -35,6 +35,7 @@
                     <li><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
                     <li><a href="Discover.html">Discover</a></li>
+                    <li><a href="../index.html">Profile</a></li>
 
                 </ul>
             </nav>
