--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,6 +38,7 @@
                     <li class="current-menu-item"><a href="directory.html">Directory</a></li>
                     <li><a href="join.html">Join</a></li>
                     <li><a href="Discover.html">Discover</a></li>
+                    <li><a href="../index.html">Profile</a></li>
                 </ul>
             </nav>
         </div>
