--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,6 +38,8 @@
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="Discover.html">Discover</a></li>
+                <li><a href="../index.html">Profile</a></li>
+
             </ul>
         </nav>
     </div>
