--- a/chamber/Discover.html
+++ b/chamber/Discover.html
@@ -46,13 +46,29 @@
     </main>
 
     <footer>
-        <p class="copyright">
-            <span class="copyrightIcon">&#169;</span>
-            <span class="currentyear"></span> -
-            <span class="authorName">Quadri K. Adisa</span> -
-            <span class="country">Nigeria</span>
-        </p>
-        <p class="lastModified"></p>
+        <div class="footer-container">
+            <div class="address">
+                <p class="address-name">Quadri.k Chamber of Commerce</p>
+                <p>No. 2 ifesowapo Street</p>
+                <p>Ibadan, Oyo State, Nigeria</p>
+            </div>
+            <div class="social-media">
+                <a href="#"><img src="images/icons/youtube.png" alt="Youtube" width="30" height="30"></a>
+                <a href="#"><img src="images/icons/twitter.png" alt="Twitter" width="30" height="30"></a>
+                <a href="#"><img src="images/icons/linkedin.png" alt="Instagram" width="30" height="30"></a>
+            </div>
+            <div class="developer">
+                <p>WDD231 Class Project</p>
+                <p>Quadri Kolawole</p>
+                <p class="copyright">
+                    <span class="copyrightIcon">&#169;</span>
+                    <span class="currentyear"></span> 
+                    <span class="authorName">Adiquatech</span> 
+                    <span class="Website">Chamber of Commerce</span>
+                </p>
+                <p class="lastModified"></p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
