--- a/chamber/index.html
+++ b/chamber/index.html
@@ -91,7 +91,10 @@
             </div>
         </section>
 
-        <div id="membership-container"></div>
+        <!-- <div id="membership-container"></div> -->
+        <article id="membership-container">
+                
+        </article>
 
     </main>
 
