--- a/chamber/index.html
+++ b/chamber/index.html
@@ -52,7 +52,7 @@
                 <img src="images/place-desktop.webp" alt="Hero Image" class="hero-image">
             </picture>
             <div class="hero-content">
-                <h1>Welcome to Quadri Chamber of Commerce</h1>
+                <h1>Welcome to Adiquatech Chamber of Commerce</h1>
                 <p>Your gateway to business success</p>
                 <a href="join.html" class="cta-button">Join Us Today!</a>
             </div>
@@ -91,7 +91,6 @@
             </div>
         </section>
 
-        <!-- <div id="membership-container"></div> -->
         <article id="membership-container">
                 
         </article>
