--- a/chamber/index.html
+++ b/chamber/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="Directory page for chamber of commerce ">
     <meta property="og:url" content="https://adiquatech.github.io/wdd231/chamber/directory.html">
-    <meta property="og:image" content = "images/place.webp">
+    <meta property="og:image" content="https://adiquatech.github.io/wdd231/chamber/images/web-og.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -63,7 +63,7 @@
             <div id="current-weather">
                 <h2>Current Weather</h2>
                 <div id="weather">
-                    <img id="weatherIcon" src="" alt="">
+                    <img id="weatherIcon" src="https://openweathermap.org/img/wn/${data.weather[0].icon}@2x.png" alt="weatherIcon">
                     <div id="weatherInfo">
                         <p id="city"></p>
                         <p id="temperature"></p>
@@ -88,7 +88,6 @@
         </section>
 
         <article id="membership-container">
-                <h2></h2>
         </article>
 
     </main>
