--- a/chamber/index.html
+++ b/chamber/index.html
@@ -6,7 +6,7 @@
     <title>WDD231 - Web Frontend Development I - Quadri Kolawole</title>
     <meta name="description" content="Directory page">
     <meta name="author" content="Quadri Kolawole">
-    <meta property="og:title" content="Directory page">
+    <meta property="og:title" content="Home page">
     <meta property="og:type" content="website">
     <meta property="og:description" content="Directory page for chamber of commerce ">
     <meta property="og:url" content="https://adiquatech.github.io/wdd231/chamber/directory.html">
