--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,7 +63,7 @@
             <div id="current-weather">
                 <h2>Current Weather</h2>
                 <div id="weather">
-                    <img id="weatherIcon" src="https://openweathermap.org/img/wn/${data.weather[0].icon}@2x.png" alt="weatherIcon">
+                    <img id="weatherIcon" src="weather.png" alt="weatherIcon">
                     <div id="weatherInfo">
                         <p id="city"></p>
                         <p id="temperature"></p>
