--- a/chamber/index.html
+++ b/chamber/index.html
@@ -87,8 +87,9 @@
             </div>
         </section>
 
-        <article id="membership-container">
-        </article>
+        <div id="membership-container">
+            
+        </div>
 
     </main>
 
