--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -17,9 +17,9 @@
     <link rel="icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/join.css">
     <script src="scripts/script.js" defer></script>
     <script src="scripts/join.js" defer></script>
+
 </head>
 <body>
     <header>
@@ -38,53 +38,14 @@
                     <li><a href="join.html">Join</a></li>
                     <li><a href="Discover.html">Discover</a></li>
                     <li><a href="../index.html">Profile</a></li>
-
                 </ul>
             </nav>
         </div>
-    
 
     <main>
-        <section id="join-section">
-            <div id="form-section">
-                <h1>Chamber Member</h1>
+        <h1>Chamber of Commerce</h1>
 
-                <form method="GET" action="thanks.html" class="designOne">
-                    <label>First Name <input type="text" name="first" required autocomplete="given-name" title="Your First Name"></label>
-                    <label>Last Name <input type="text" name="last" required autocomplete="family-name" title="Your Last Name"></label>
-                    <label>Email <input type="email" name="email" required placeholder="example@gmail.com"  title="Your Email" autocomplete="email"></label>
-                    <label>Cell Phone <input type="tel" name="phone"  autocomplete="tel" title="A Phone Number with dashes" placeholder="123-000-1234" ></label>
-
-                <h3>Membership Level</h3>
-                    <label><input type="radio" name="member" value="Baptism" checked> NP Membership</label>
-                    <label><input type="radio" name="member" value="Initiatory"> Gold Membership</label>
-                    <label><input type="radio" name="member" value="Endowment"> Silver Membership</label>
-                    <label><input type="radio" name="member" value="Sealing"> Bronze Membership</label>
-
-                <h3>Date</h3>
-                    <label>Date <input type="date" name="fecha" required></label>
-
-                <input type="submit" value="Join Chamber of commerce">
-                </form>
-            </div>
-
-            <div id="member">
-                <div id="member-card"></div>
-            <!-- Membership Cards Section -->
-                <dialog id="mydialog">
-                    <div>
-                      <h2>Sample Title</h2>
-                      <button>X</button>
-                    </div>
-                    <p></p>
-                </dialog>
-              
-            </div>
-
-            <div>
-                <!-- One single dialog for all temples -->
-            </div>
-        </section>
+        <div id="results"></div>
     </main>
 
     <footer>
