--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <script src="scripts/script.js" defer></script>
+    <script src="scripts/course.js" defer></script>
 </head>
 <body>
     <header>
@@ -57,10 +58,15 @@
                 <button id="cseCourses">CSE</button>
                 <button id="wddCourses">WDD</button>
             </div>
+
             <div id="courseList"></div>
             <div class="total-credits">
                 <h3>Total Credits: <span id="totalCredits"></span></h3>
             </div>
+
+            <dialog class="course-details"></dialog>
+
+
             <div class ="Completed-Credits">
                 <h3>Completed Course Credits: <span id="CompletedCredits"></span></h3>
             </div>
