--- a/chamber/join.html
+++ b/chamber/join.html
@@ -70,19 +70,13 @@
 
             <div id="member">
                 <div id="member-card"></div>
-            <!-- Membership Cards Section -->
                 <dialog id="mydialog">
                     <div>
-                      <h2>Sample Title</h2>
-                      <button>X</button>
-                    </div>
-                    <p></p>
+                        <h2 id="dialog-title">Sample Title</h2>
+                        <button id="close-dialog">X</button>
+                      </div>
+                      <p id="dialog-content"></p>- This will display membership details like benefits -->
                 </dialog>
-              
-            </div>
-
-            <div>
-                <!-- One single dialog for all temples -->
             </div>
         </section>
     </main>
