--- a/chamber/join.html
+++ b/chamber/join.html
@@ -47,7 +47,7 @@
     <main>
         <section id="join-section">
             <div id="form-section">
-                <h1>Chamber Member</h1>
+                <h1>Member Application Form</h1>
 
                 <form method="GET" action="thanks.html" class="designOne">
                     <label>First Name <input type="text" name="first" required autocomplete="given-name" title="Your First Name"></label>
@@ -64,11 +64,12 @@
                 <h3>Date</h3>
                     <label>Date <input type="date" name="fecha" required></label>
 
-                <input type="submit" value="Join Chamber of commerce">
+                <input type="submit" value="Apply For Membership">
                 </form>
             </div>
 
             <div id="member">
+                <h2 id = "member-title">Membership Levels Information</h2>
                 <div id="member-card"></div>
                 <dialog id="mydialog">
                     <div>
